offload/tests/ui/fail_generic.rs
use offload::offload;

#[offload]
fn identity<T>(value: T) -> T {
    value
}

fn main() {}
